RESOLVED FIXED 95652
Don't create access error strings if there is no access error
https://bugs.webkit.org/show_bug.cgi?id=95652
Summary Don't create access error strings if there is no access error
Filip Pizlo
Reported 2012-09-02 00:50:50 PDT
Patch forthcoming. I'm just trying to undo our 50% regression in pdfjs caused by http://trac.webkit.org/changeset/126165.
Attachments
the patch (2.12 KB, patch)
2012-09-02 00:54 PDT, Filip Pizlo
abarth: review+
abarth: commit-queue-
Filip Pizlo
Comment 1 2012-09-02 00:54:48 PDT
Created attachment 161839 [details] the patch
Adam Barth
Comment 2 2012-09-02 01:02:24 PDT
Comment on attachment 161839 [details] the patch I would just remove the |result| temporary and just early return if shouldAllowAccessToFoo returns true. Thanks for fixing my regression.
Filip Pizlo
Comment 3 2012-09-02 01:03:11 PDT
(In reply to comment #2) > (From update of attachment 161839 [details]) > I would just remove the |result| temporary and just early return if shouldAllowAccessToFoo returns true. Thanks for fixing my regression. Good point! I will do that instead. Thanks for the quick review!
Filip Pizlo
Comment 4 2012-09-02 01:34:03 PDT
Note You need to log in before you can comment on or make changes to this bug.