Don't create access error strings if there is no access error https://bugs.webkit.org/show_bug.cgi?id=95652

Reviewed by Adam Barth.

This undoes the 50% performance regression in pdfjs caused by
http://trac.webkit.org/changeset/126165

No new tests because behavior is unchanged.

* bindings/js/JSDOMBinding.cpp:
(WebCore::shouldAllowAccessToFrame):
(WebCore::shouldAllowAccessToDOMWindow):



Canonical link: https://commits.webkit.org/113545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127387 268f45cc-cd09-0410-ab3c-d52691b4dbfc